--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".AddTableActivity"
+            android:label="@string/title_activity_add_table" >
+        </activity>
+        <activity
+            android:theme="@style/Theme.AppCompat.Dialog.Alert"
+            android:name=".NumberSelectActivity"
+            android:label="@string/title_activity_number_select" >
+        </activity>
     </application>
 
 </manifest>
